[gd_scene load_steps=6 format=3 uid="uid://cca3a56v5q24h"]

[ext_resource type="Script" path="res://enemies/navigation/navigation-script.gd" id="1_ririd"]
[ext_resource type="AudioStream" uid="uid://dvt0umbxb1udv" path="res://enemies/sounds/steps/mech-step-1.wav" id="2_qdyj0"]
[ext_resource type="AudioStream" uid="uid://x83m2y8xi5a6" path="res://enemies/sounds/steps/mech-step-2.wav" id="3_ogdgd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3t3w6"]
size = Vector3(2, 3, 2)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bhfjr"]

[node name="enemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_ririd")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.214, 0, 0)
target_position = Vector3(0, -10, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 4, 0, 0, 0, 2, 0, 0, 0)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.949848, 1.11324, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3t3w6")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -2.0
path_postprocessing = 1
avoidance_enabled = true
use_3d_avoidance = true
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Step1" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, -0.75)
stream = ExtResource("2_qdyj0")
max_polyphony = 2
panning_strength = 2.0

[node name="Step2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0.75)
stream = ExtResource("3_ogdgd")
max_polyphony = 2
panning_strength = 2.0

[node name="Area3D" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_bhfjr")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
